--- a/src/components/pages/Experience/Experience.css
+++ b/src/components/pages/Experience/Experience.css
@@ -197,3 +197,9 @@
         font-size: 1.2rem;
     }
 }
+@media only screen and (max-height: 600px) {
+    .experience-container,
+    .skill-container{
+        padding-top: 200px;
+    }
+}
