--- a/src/components/pages/projects/Project.css
+++ b/src/components/pages/projects/Project.css
@@ -198,3 +198,9 @@
         font-size: 1.2rem;
     }
 }
+@media only screen and (max-height: 600px) {
+    .projects-container,
+    .project-container{
+        padding-top: 200px;
+    }
+}
